# labour_market_AU

./: .env.example  .gitignore  CLAUDE.md  LICENSE  ROADMAP.md  config.yaml  pipeline_warehouse_mirror.py  prefect.yaml  pyproject.toml
.github/workflows/: deploy.yml
legacy_code/: jobkeeper_treasury_00001.py  jobkeeper_treasury_00002.py  labour_force_jobs_and_skills_0001.py  labour_force_jobs_and_skills_0002.py  labour_force_jobs_and_skills_0002_supplement.py  labour_force_jobs_and_skills_0003.py  labour_force_jobs_and_skills_0004.py
migrations/: 001_initial_schema.sql  002_page_monitoring.sql  003_salm_tables.sql  004_ivi_tables.sql  005_projections_tables.sql  006_geography_seed.sql  007_salm_add_smoothed_to_unique.sql  008_discovered_files.sql  009_ivi_add_file_type.sql  010_projections_add_dimension_type.sql  011_ivi_add_file_type_to_unique.sql  012_ivi_rename_state_to_geo_area.sql  013_dataset_notes.sql  014_total_vacancies.sql  015_unified_schema.sql  016_rlmi.sql  017_lft.sql  018_publication_calendar.sql  019_publication_calendar_tracking.sql
src/labour_market_au/: __init__.py  config.py  main.py  notify.py  prefect_flow.py
src/labour_market_au/extraction/: excel_parser.py  html_parser.py  ivi_parser.py  lft_parser.py  projections_parser.py  rlmi_parser.py  salm_parser.py  tnv_parser.py
src/labour_market_au/scraping/: catalog.py  client.py  page_monitor.py
src/labour_market_au/storage/: calendar_sync.py  database.py  loader.py  models.py
src/labour_market_au/utils/: logging.py
tests/: conftest.py  test_config.py  test_ivi_parser.py  test_lft_parser.py  test_page_monitor.py  test_prefect_yaml.py  test_projections_parser.py  test_rlmi_parser.py  test_salm_parser.py  test_tnv_parser.py  test_warehouse_mirror.py
