[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labour-market-au"
version = "0.1.0"
description = "Australian labour market data scraper - IVI, SALM, Employment Projections from JSA and DEWR"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "curl-cffi>=0.7",
    "psycopg[binary]>=3.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "prefect>=3.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.21",
]
# CI-only tooling. Kept out of `dev` so laptop devs running pytest don't
# pull in a CLI they don't use. CI installs `.[dev,ci]`. Pinned to an
# immutable commit SHA -- tags can be force-pushed.
ci = [
    "statdesk-prefect-tools @ git+https://github.com/StatDeskAU/statdesk-prefect-tools.git@e3b3fa96514dbcf253ecf7f0f3af4b1888ee6edd",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "respx>=0.21",
]

[project.scripts]
labour-market-au = "labour_market_au.main:cli"

[tool.hatch.metadata]
# Required so `statdesk-prefect-tools @ git+https://...` (PEP 508 direct
# reference URL) is accepted by hatchling. Default is False -- direct
# refs are rejected to avoid surprise network installs from the index path.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/labour_market_au"]
